examples/semantics/errors/error2.grace
fun error2 () : nothing
	var foo : int[10];
{
	foo[foo] <- 5;
}
